# TicTacToe

./: .gitignore  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  GameBoard.cpp  GameBoard.h  GameController.cpp  GameController.h  Main.cpp  Player.cpp  Player.h  PlayerType.h  config.ini  main
inc/: ConfigReader.h  ConfigReader.hpp  GameBoard.hpp  GameController.hpp  HelperFunctions.hpp  Player.h  Player.hpp  Types.h  Types.hpp
scripts/: unixBuild.sh
src/: ConfigReader.cpp  GameBoard.cpp  GameController.cpp  HelperFunctions.cpp  Main.cpp  Player.cpp
